--- a/webapp/src/ionicapp/www/templates/configureDevice.html
+++ b/webapp/src/ionicapp/www/templates/configureDevice.html
@@ -19,17 +19,15 @@
     <div id="configureDevice-markdown16" style="text-align:center;" class="show-list-numbers-and-dots">
       <p style="color:#444444;font-size:12px;">Status: {{ data.status }}</p>
     </div>
-    <div class="spacer" style="height: 20px;"></div>
+    <div class="spacer" style="height: 10px;"></div>
     <button id="configureDevice-button20" ng-click="submitUART()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button">UART</button>
     <button id="configureDevice-button52" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button">GPIO</button>
     <div class="spacer" style="width: 300px; height: 7px;"></div>
     <button id="configureDevice-button18" ng-click="submitI2C()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button">I2C</button>
-    <button id="configureDevice-button58" ng-click="submitTODO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large widget_button">ADC</button>
+    <button id="configureDevice-button58" ng-click="submitADC()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button">ADC</button>
     <div class="spacer" style="width: 300px; height: 7px;"></div>
-    <button id="configureDevice-button59" ng-click="submitTODO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large widget_button">OneWire</button>
-    <button id="configureDevice-button74" ng-click="submitTODO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large widget_button">TProbe</button>
-    <div class="spacer" style="width: 300px; height: 30px;"></div>
-    <button id="configureDevice-button22" ng-click="submitNotifications()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-stable button-large button-outline widget_button">Notification</button>
-    <div class="spacer" style="width: 300px; height: 80px;"></div>
+    <button id="configureDevice-button59" ng-click="submit1WIRE()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button">OneWire</button>
+    <button id="configureDevice-button74" ng-click="submitTPROBE()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button">TProbe</button>
+    <div class="spacer" style="width: 300px; height: 20px;"></div>
   </ion-content>
 </ion-view>
