--- a/webapp/src/ionicapp/www/templates/speaker.html
+++ b/webapp/src/ionicapp/www/templates/speaker.html
@@ -12,7 +12,7 @@
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
-    <button id="speaker-button95" ng-click="viewI2CDevice()" style="font-weight:500;font-size:18px;" class="button button-dark button-block button-clear icon-right ion-android-settings">{{ data.sensor.sensorname }} - I2C {{ data.sensor.number }}</button>
+    <button id="speaker-button95" ng-click="viewI2CDevice()" style="font-weight:500;font-size:18px;" class="button button-dark button-block button-clear icon-right ion-android-settings">{{ data.sensor.sensorname }} - {{data.source}} {{ data.sensor.number }}</button>
     <div class="spacer" style="width: 300px; height: 20px;"></div>
     <form id="speaker-form72" class="list">
       <div id="speaker-markdown97" class="show-list-numbers-and-dots">
