--- a/webapp/src/ionicapp/www/templates/viewI2CDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewI2CDevice.html
@@ -12,7 +12,7 @@
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
-    <button id="viewI2CDevice-button97" ng-click="processI2CSensor()" style="font-weight:500;font-size:18px;" class="button button-dark button-block button-clear icon-right ion-android-settings">{{ data.sensor.sensorname }} - I2C {{ data.sensor.number }}</button>
+    <button id="viewI2CDevice-button97" style="font-weight:500;font-size:18px;" class="button button-dark button-block button-clear">{{ data.sensor.sensorname }} - {{data.source}} {{ data.sensor.number }}</button>
     <form id="viewI2CDevice-form31" class="list">
       <div class="spacer" style="width: 480px; height: 10px;"></div>
       <div id="viewI2CDevice-markdown89" class="show-list-numbers-and-dots">
