Updated GET DEVICES
Updated GET I2C/ADC/1WIRE/TPROBE DEVICES to query device for ENABLED parameter
Added GET ALL I2C INPUT DEVICES for use in OUTPUT devices (DIG2/LED/BEEP)

--- a/webapp/src/ionicapp/www/templates/lightRGB.html
+++ b/webapp/src/ionicapp/www/templates/lightRGB.html
@@ -93,7 +93,15 @@
         <select ng-options="device.id as device.devicename for device in devices" ng-model="datatemp.hardware_devicename" ng-change="changeDevice()"></select>
       </label>
       <label class="item item-select" id="lightRGB-select48">
-        <span class="input-label">I2C Device</span>
+        <span class="input-label">Peripheral</span>
+        <select ng-options="peripheral.id as peripheral.label for peripheral in peripherals" ng-model="datatemp.hardware_peripheral" ng-change="changePeripheral()"></select>
+      </label>
+      <label class="item item-select" id="lightRGB-select71">
+        <span class="input-label">Sensor</span>
+        <select ng-options="i2cdevice.id as i2cdevice.sensorname for i2cdevice in i2cdevices" ng-model="datatemp.hardware_sensorname"></select>
+      </label>
+      <label class="item item-select" id="lightRGB-select72">
+        <span class="input-label">Attribute</span>
         <select ng-options="i2cdevice.id as i2cdevice.sensorname for i2cdevice in i2cdevices" ng-model="datatemp.hardware_sensorname"></select>
       </label>
     </form>
@@ -106,7 +114,15 @@
         <select ng-options="device.id as device.devicename for device in devices" ng-model="datatemp.hardware_devicename" ng-change="changeDevice()"></select>
       </label>
       <label class="item item-select" id="lightRGB-select51">
-        <span class="input-label">I2C Device</span>
+        <span class="input-label">Peripheral</span>
+        <select ng-options="peripheral.id as peripheral.label for peripheral in peripherals" ng-model="datatemp.hardware_peripheral" ng-change="changePeripheral()"></select>
+      </label>
+      <label class="item item-select" id="lightRGB-select73">
+        <span class="input-label">Sensor</span>
+        <select ng-options="i2cdevice.id as i2cdevice.sensorname for i2cdevice in i2cdevices" ng-model="datatemp.hardware_sensorname"></select>
+      </label>
+      <label class="item item-select" id="lightRGB-select74">
+        <span class="input-label">Attribute</span>
         <select ng-options="i2cdevice.id as i2cdevice.sensorname for i2cdevice in i2cdevices" ng-model="datatemp.hardware_sensorname"></select>
       </label>
     </form>
@@ -119,7 +135,15 @@
         <select ng-options="device.id as device.devicename for device in devices" ng-model="datatemp.hardware_devicename" ng-change="changeDevice()"></select>
       </label>
       <label class="item item-select" id="lightRGB-select53">
-        <span class="input-label">I2C Device</span>
+        <span class="input-label">Peripheral</span>
+        <select ng-options="peripheral.id as peripheral.label for peripheral in peripherals" ng-model="datatemp.hardware_peripheral" ng-change="changePeripheral()"></select>
+      </label>
+      <label class="item item-select" id="lightRGB-select77">
+        <span class="input-label">Sensor</span>
+        <select ng-options="i2cdevice.id as i2cdevice.sensorname for i2cdevice in i2cdevices" ng-model="datatemp.hardware_sensorname"></select>
+      </label>
+      <label class="item item-select" id="lightRGB-select78">
+        <span class="input-label">Attribute</span>
         <select ng-options="i2cdevice.id as i2cdevice.sensorname for i2cdevice in i2cdevices" ng-model="datatemp.hardware_sensorname"></select>
       </label>
     </form>
@@ -132,7 +156,15 @@
         <select ng-options="device.id as device.devicename for device in devices" ng-model="datatemp.hardware_devicename" ng-change="changeDevice()"></select>
       </label>
       <label class="item item-select" id="lightRGB-select55">
-        <span class="input-label">I2C Device</span>
+        <span class="input-label">Peripheral</span>
+        <select ng-options="peripheral.id as peripheral.label for peripheral in peripherals" ng-model="datatemp.hardware_peripheral" ng-change="changePeripheral()"></select>
+      </label>
+      <label class="item item-select" id="lightRGB-select75">
+        <span class="input-label">Sensor</span>
+        <select ng-options="i2cdevice.id as i2cdevice.sensorname for i2cdevice in i2cdevices" ng-model="datatemp.hardware_sensorname"></select>
+      </label>
+      <label class="item item-select" id="lightRGB-select76">
+        <span class="input-label">Attribute</span>
         <select ng-options="i2cdevice.id as i2cdevice.sensorname for i2cdevice in i2cdevices" ng-model="datatemp.hardware_sensorname"></select>
       </label>
     </form>
