--- a/webapp/src/ionicapp/www/templates/device1WIRE.html
+++ b/webapp/src/ionicapp/www/templates/device1WIRE.html
@@ -24,13 +24,10 @@
           </p>
         </div>
         <div id="device1WIRE-markdown290" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.manufacturer }}</p>
-        </div>
-        <div id="device1WIRE-markdown291" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.model }}</p>
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.manufacturer }} - {{ sensor.model }}</p>
         </div>
         <div id="device1WIRE-markdown292" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.enabled }}</p>
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.enabled ? "ENABLED": "DISABLED" }}</p>
         </div>
       </div>
     </ion-list>
