--- a/webapp/src/ionicapp/www/templates/deviceADC.html
+++ b/webapp/src/ionicapp/www/templates/deviceADC.html
@@ -34,13 +34,10 @@
           </p>
         </div>
         <div id="deviceADC-markdown154" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.manufacturer }}</p>
-        </div>
-        <div id="deviceADC-markdown155" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.model }}</p>
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.manufacturer }} - {{ sensor.model }}</p>
         </div>
         <div id="deviceADC-markdown156" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.enabled }}</p>
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.enabled ? "ENABLED": "DISABLED" }}</p>
         </div>
       </div>
     </ion-list>
