--- a/webapp/src/ionicapp/www/templates/deviceTPROBE.html
+++ b/webapp/src/ionicapp/www/templates/deviceTPROBE.html
@@ -24,13 +24,10 @@
           </p>
         </div>
         <div id="deviceTPROBE-markdown237" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.manufacturer }}</p>
-        </div>
-        <div id="deviceTPROBE-markdown251" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.model }}</p>
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.manufacturer }} - {{ sensor.model }}</p>
         </div>
         <div id="deviceTPROBE-markdown252" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.enabled }}</p>
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.enabled ? "ENABLED": "DISABLED" }}</p>
         </div>
       </div>
     </ion-list>
