--- a/webapp/src/ionicapp/www/templates/speaker.html
+++ b/webapp/src/ionicapp/www/templates/speaker.html
@@ -32,7 +32,15 @@
         <select ng-options="device.id as device.devicename for device in devices" ng-model="data.hardware_devicename" ng-change="changeDevice()"></select>
       </label>
       <label class="item item-select" id="speaker-select35">
-        <span class="input-label">I2C Device</span>
+        <span class="input-label">Peripheral</span>
+        <select ng-options="peripheral.id as peripheral.label for peripheral in peripherals" ng-model="data.hardware_peripheral" ng-change="changePeripheral()"></select>
+      </label>
+      <label class="item item-select" id="speaker-select79">
+        <span class="input-label">Sensor</span>
+        <select ng-options="i2cdevice.id as i2cdevice.sensorname for i2cdevice in i2cdevices" ng-model="data.hardware_sensorname"></select>
+      </label>
+      <label class="item item-select" id="speaker-select80">
+        <span class="input-label">Attribute</span>
         <select ng-options="i2cdevice.id as i2cdevice.sensorname for i2cdevice in i2cdevices" ng-model="data.hardware_sensorname"></select>
       </label>
     </form>
