Updated UIs to display both ENABLED and CONFIGURED parameters

--- a/webapp/src/ionicapp/www/templates/view1WIREDevice.html
+++ b/webapp/src/ionicapp/www/templates/view1WIREDevice.html
@@ -41,7 +41,7 @@
       </div>
     </form>
     <form id="view1WIREDevice-form154" class="list">
-      <ion-toggle toggle-class="toggle-positive" id="view1WIREDevice-toggle11" ng-model="data.enable" ng-change="change1WIREDevice(data.enable)">Enable</ion-toggle>
+      <ion-toggle toggle-class="toggle-positive" id="view1WIREDevice-toggle11" ng-model="data.enabled" ng-change="change1WIREDevice(data.enabled)">Enable</ion-toggle>
     </form>
     <form id="view1WIREDevice-form155" class="list" ng-show="data.sensor.type==&quot;input&quot;">
       <div id="view1WIREDevice-markdown283" class="show-list-numbers-and-dots">
