--- a/webapp/src/ionicapp/www/templates/viewADCDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewADCDevice.html
@@ -41,7 +41,7 @@
       </div>
     </form>
     <form id="viewADCDevice-form140" class="list">
-      <ion-toggle toggle-class="toggle-positive" id="viewADCDevice-toggle10" ng-model="data.enable" ng-change="changeADCDevice(data.enable)">Enable</ion-toggle>
+      <ion-toggle toggle-class="toggle-positive" id="viewADCDevice-toggle10" ng-model="data.enabled" ng-change="changeADCDevice(data.enabled)">Enable</ion-toggle>
     </form>
     <form id="viewADCDevice-form141" class="list" ng-show="data.sensor.type==&quot;input&quot;">
       <div id="viewADCDevice-markdown223" class="show-list-numbers-and-dots">
