--- a/webapp/src/ionicapp/www/templates/viewI2CDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewI2CDevice.html
@@ -47,7 +47,7 @@
       </div>
     </form>
     <form id="viewI2CDevice-form105" class="list">
-      <ion-toggle toggle-class="toggle-positive" id="viewI2CDevice-toggle7" ng-model="data.enable" ng-change="changeI2CDevice(data.enable)">Enable</ion-toggle>
+      <ion-toggle toggle-class="toggle-positive" id="viewI2CDevice-toggle7" ng-model="data.enabled" ng-change="changeI2CDevice(data.enabled)">Enable</ion-toggle>
     </form>
     <form id="viewI2CDevice-form112" class="list" ng-show="data.sensor.type==&quot;input&quot;">
       <div id="viewI2CDevice-markdown147" class="show-list-numbers-and-dots">
