--- a/webapp/src/ionicapp/www/templates/viewTPROBEDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewTPROBEDevice.html
@@ -41,7 +41,7 @@
       </div>
     </form>
     <form id="viewTPROBEDevice-form146" class="list">
-      <ion-toggle toggle-class="toggle-positive" id="viewTPROBEDevice-toggle12" ng-model="data.enable" ng-change="changeTPROBEDevice(data.enable)">Enable</ion-toggle>
+      <ion-toggle toggle-class="toggle-positive" id="viewTPROBEDevice-toggle12" ng-model="data.enabled" ng-change="changeTPROBEDevice(data.enabled)">Enable</ion-toggle>
     </form>
     <form id="viewTPROBEDevice-form147" class="list" ng-show="data.sensor.type==&quot;input&quot;">
       <div id="viewTPROBEDevice-markdown247" class="show-list-numbers-and-dots">
