--- a/webapp/src/ionicapp/www/templates/deviceTPROBE.html
+++ b/webapp/src/ionicapp/www/templates/deviceTPROBE.html
@@ -27,7 +27,7 @@
           <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.manufacturer }} - {{ sensor.model }}</p>
         </div>
         <div id="deviceTPROBE-markdown252" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.enabled ? "ENABLED": "DISABLED" }}</p>
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.configured ? "CONFIGURED": "UNCONFIGURED" }} and {{ sensor.enabled ? "ENABLED": "DISABLED" }}</p>
         </div>
       </div>
     </ion-list>
