Updated UIs to display sensor readings in the list of devices

--- a/webapp/src/ionicapp/www/templates/device1WIRE.html
+++ b/webapp/src/ionicapp/www/templates/device1WIRE.html
@@ -29,6 +29,9 @@
         <div id="device1WIRE-markdown292" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.configured ? "CONFIGURED": "UNCONFIGURED" }} and {{ sensor.enabled ? "ENABLED": "DISABLED" }}</p>
         </div>
+        <div id="device1WIRE-markdown295" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.readings }}</p>
+        </div>
       </div>
     </ion-list>
     <button id="device1WIRE-button131" ng-click="add1WIREDevice()" class="button button-positive button-large button-block button-clear icon-right ion-android-add-circle"></button>
