--- a/webapp/src/ionicapp/www/templates/deviceADC.html
+++ b/webapp/src/ionicapp/www/templates/deviceADC.html
@@ -39,6 +39,9 @@
         <div id="deviceADC-markdown156" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.configured ? "CONFIGURED": "UNCONFIGURED" }} and {{ sensor.enabled ? "ENABLED": "DISABLED" }}</p>
         </div>
+        <div id="deviceADC-markdown251" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.readings }}</p>
+        </div>
       </div>
     </ion-list>
     <button id="deviceADC-button108" ng-click="addADCDevice()" class="button button-positive button-large button-block button-clear icon-right ion-android-add-circle"></button>
