--- a/webapp/src/ionicapp/www/templates/deviceTPROBE.html
+++ b/webapp/src/ionicapp/www/templates/deviceTPROBE.html
@@ -29,6 +29,9 @@
         <div id="deviceTPROBE-markdown252" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.configured ? "CONFIGURED": "UNCONFIGURED" }} and {{ sensor.enabled ? "ENABLED": "DISABLED" }}</p>
         </div>
+        <div id="deviceTPROBE-markdown291" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.readings }}</p>
+        </div>
       </div>
     </ion-list>
     <button id="deviceTPROBE-button128" ng-click="addTPROBEDevice()" class="button button-positive button-large button-block button-clear icon-right ion-android-add-circle"></button>
