--- a/webapp/src/ionicapp/www/css/ionic.app.css
+++ b/webapp/src/ionicapp/www/css/ionic.app.css
@@ -9808,7 +9808,14 @@ a.button {
 
 .widget_button {
   width: 48% !important;
-  height: 85px; }
+  height: 65px; }
+
+.widget_button_ex {
+  width: 96% !important;
+  height: 65px; }
+
+.line_spacing {
+  line-height: 10px; }
 
 .message_textarea {
   height: 150px; }
