Added button to clear sensor readings

--- a/webapp/src/ionicapp/www/templates/sensorDashboard.html
+++ b/webapp/src/ionicapp/www/templates/sensorDashboard.html
@@ -31,5 +31,8 @@
         </div>
       </div>
     </form>
+    <form id="sensorDashboard-form167" class="list">
+      <button id="sensorDashboard-button101" ng-click="submitDelete()" class="button button-stable button-block button-outline">Reset values</button>
+    </form>
   </ion-content>
 </ion-view>
