--- a/webapp/src/ionicapp/www/templates/sensorDashboard.html
+++ b/webapp/src/ionicapp/www/templates/sensorDashboard.html
@@ -13,6 +13,13 @@
       </p>
     </div>
     <div class="spacer" style="width: 300px; height: 20px;"></div>
+    <form id="sensorDashboard-form168" class="list" ng-show="sensors.length > 0">
+      <label class="item item-input" id="sensorDashboard-input105">
+        <span class="input-label">Refresh time (sec)</span>
+        <input type="number" placeholder="" ng-model="refresh_time" ng-disabled="refresh_automatically">
+      </label>
+      <ion-toggle toggle-class="toggle-positive" id="sensorDashboard-toggle14" ng-model="refresh_automatically" ng-change="changeRefresh(refresh_automatically)">Refresh automatically</ion-toggle>
+    </form>
     <div id="sensorDashboard-markdown311" class="show-list-numbers-and-dots">
       <p style="color:#AAAAAA;font-size:12px;">{{ sensors_counthdr }}</p>
     </div>
@@ -23,16 +30,40 @@
             <strong>{{ sensor.sensorname }}</strong>
           </p>
         </div>
-        <div id="sensorDashboard-markdown307" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:11px;">{{ sensor.class }} - {{ sensor.source }}{{ sensor.number }}</p>
+        <div id="sensorDashboard-markdown312" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;">Manufacturer: {{ sensor.manufacturer }}</p>
         </div>
-        <div id="sensorDashboard-markdown310" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:14px;">{{ sensor.readings }}</p>
+        <div id="sensorDashboard-markdown313" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;">Model: {{ sensor.model }}</p>
+        </div>
+        <div id="sensorDashboard-markdown309" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;">Peripheral: {{ sensor.source.toUpperCase() }}{{ sensor.number }} </p>
+        </div>
+        <div id="sensorDashboard-markdown317" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:12px;">.</p>
+        </div>
+        <div id="sensorDashboard-markdown310" style="text-align:center;" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#387EF5;font-size:50px;">
+            <strong> {{ sensor.readings.value }} </strong>
+            <strong> {{ sensor.units[0] }} </strong>
+          </p>
+        </div>
+        <div id="sensorDashboard-markdown308" style="text-align:right;" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#387EF5;font-size:12px;">.</p>
+        </div>
+        <div id="sensorDashboard-markdown315" style="text-align:right;" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#387EF5;font-size:10px;">Lowest: {{ sensor.readings.lowest }}</p>
+        </div>
+        <div id="sensorDashboard-markdown314" style="text-align:right;" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#387EF5;font-size:10px;">Highest: {{ sensor.readings.highest }}</p>
+        </div>
+        <div id="sensorDashboard-markdown118" style="text-align:right;" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.class.toUpperCase() }}</p>
         </div>
       </div>
     </form>
-    <form id="sensorDashboard-form167" class="list">
-      <button id="sensorDashboard-button101" ng-click="submitDelete()" class="button button-stable button-block button-outline">Reset values</button>
+    <form id="sensorDashboard-form167" class="list" ng-show="sensors.length > 0">
+      <button id="sensorDashboard-button101" ng-click="submitDelete()" class="button button-positive button-block">Reset values</button>
     </form>
   </ion-content>
 </ion-view>
