--- a/webapp/src/ionicapp/www/templates/temperature.html
+++ b/webapp/src/ionicapp/www/templates/temperature.html
@@ -29,7 +29,7 @@
       </div>
       <label class="item item-input" id="temperature-input102">
         <span class="input-label">Value</span>
-        <input type="number" placeholder="" ng-model="data.attributes.threshold.min">
+        <input type="number" placeholder="" ng-model="data.attributes.threshold.value">
       </label>
     </form>
     <form id="temperature-form110" class="list" ng-show="data.attributes.mode==1">
