Supported TPROBE multi-class UI

--- a/webapp/src/ionicapp/www/templates/addTPROBEDeviceDetails.html
+++ b/webapp/src/ionicapp/www/templates/addTPROBEDeviceDetails.html
@@ -52,6 +52,12 @@
       <div id="addTPROBEDeviceDetails-markdown168" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.tprobe.class }}</p>
       </div>
+      <div id="addTPROBEDeviceDetails-markdown121" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Device Subclass</p>
+      </div>
+      <div id="addTPROBEDeviceDetails-markdown124" class="show-list-numbers-and-dots">
+        <p style="color:#444444;font-size:18px;">{{ data.tprobe.subclass }}</p>
+      </div>
       <div id="addTPROBEDeviceDetails-markdown217" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Device Type</p>
       </div>
