--- a/webapp/src/ionicapp/www/templates/viewI2CDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewI2CDevice.html
@@ -39,6 +39,12 @@
       <div id="viewI2CDevice-markdown122" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.class }}</p>
       </div>
+      <div id="viewI2CDevice-markdown326" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Subclass</p>
+      </div>
+      <div id="viewI2CDevice-markdown327" class="show-list-numbers-and-dots">
+        <p style="color:#444444;font-size:18px;">{{ data.sensor.subclass ? data.sensor.subclass : "none" }}</p>
+      </div>
       <div id="viewI2CDevice-markdown145" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Type</p>
       </div>
