--- a/webapp/src/ionicapp/www/templates/view1WIREDevice.html
+++ b/webapp/src/ionicapp/www/templates/view1WIREDevice.html
@@ -33,6 +33,12 @@
       <div id="view1WIREDevice-markdown280" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.class }}</p>
       </div>
+      <div id="view1WIREDevice-markdown330" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Subclass</p>
+      </div>
+      <div id="view1WIREDevice-markdown331" class="show-list-numbers-and-dots">
+        <p style="color:#444444;font-size:18px;">{{ data.sensor.subclass ? data.sensor.subclass : "none" }}</p>
+      </div>
       <div id="view1WIREDevice-markdown281" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Type</p>
       </div>
