--- a/webapp/src/ionicapp/www/templates/viewADCDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewADCDevice.html
@@ -33,6 +33,12 @@
       <div id="viewADCDevice-markdown220" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.class }}</p>
       </div>
+      <div id="viewADCDevice-markdown328" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Subclass</p>
+      </div>
+      <div id="viewADCDevice-markdown329" class="show-list-numbers-and-dots">
+        <p style="color:#444444;font-size:18px;">{{ data.sensor.subclass ? data.sensor.subclass : "none" }}</p>
+      </div>
       <div id="viewADCDevice-markdown221" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Type</p>
       </div>
