--- a/webapp/src/ionicapp/www/templates/light.html
+++ b/webapp/src/ionicapp/www/templates/light.html
@@ -27,15 +27,54 @@
       <div id="light-markdown126" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Color settings</p>
       </div>
-      <button id="light-button110" ng-click="configureColor(&quot;RGB&quot;)" style="text-align:left;" class="button button-stable button-large button-block button-outline icon-right ion-ios-arrow-forward">RGB</button>
+      <div class="item item-body" id="light-list-item-container12" ng-click="configureColor(&quot;RGB&quot;)">
+        <div id="light-markdown315" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:18px;">
+            <strong> RGB </strong>
+          </p>
+        </div>
+        <div id="light-markdown344" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ data.attributes.color.single.endpoint == 0 ? "#" + ("00000" + data.attributes.color.single.manual.toString(16).toUpperCase()).slice(-6) : "" }}</p>
+        </div>
+      </div>
     </form>
     <form id="light-form119" class="list" ng-show="data.attributes.color.usage==1">
       <div id="light-markdown174" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Color values</p>
       </div>
-      <button id="light-button113" ng-click="configureColor(&quot;RED&quot;)" style="text-align:left;" class="button button-assertive button-large button-block button-outline icon-right ion-ios-arrow-forward">Red</button>
-      <button id="light-button114" ng-click="configureColor(&quot;GREEN&quot;)" style="text-align:left;" class="button button-balanced button-large button-block button-outline icon-right ion-ios-arrow-forward">Green</button>
-      <button id="light-button115" ng-click="configureColor(&quot;BLUE&quot;)" style="text-align:left;" class="button button-positive button-large button-block button-outline icon-right ion-ios-arrow-forward">Blue</button>
+      <div class="item item-body" id="light-list-item-container13" ng-click="configureColor(&quot;RED&quot;)">
+        <div id="light-markdown332" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#FF0000;font-size:18px;">
+            <strong> RED </strong>
+          </p>
+        </div>
+        <div id="light-markdown341" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ data.attributes.color.individual.red.endpoint == 0 ? "0x" + ("0" + data.attributes.color.individual.red.manual.toString(16).toUpperCase()).slice(-2) + " (" + data.attributes.color.individual.red.manual + ")" : data.attributes.color.individual.red.hardware.devicename
+            + " &gt; " + data.attributes.color.individual.red.hardware.peripheral + " &gt; " + data.attributes.color.individual.red.hardware.sensorname + " &gt; " + data.attributes.color.individual.red.hardware.attribute }}</p>
+        </div>
+      </div>
+      <div class="item item-body" id="light-list-item-container16" ng-click="configureColor(&quot;GREEN&quot;)">
+        <div id="light-markdown335" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#00FF00;font-size:18px;">
+            <strong> GREEN </strong>
+          </p>
+        </div>
+        <div id="light-markdown342" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ data.attributes.color.individual.green.endpoint == 0 ? "0x" + ("0" + data.attributes.color.individual.green.manual.toString(16).toUpperCase()).slice(-2) + " (" + data.attributes.color.individual.green.manual + ")" : data.attributes.color.individual.green.hardware.devicename
+            + " &gt; " + data.attributes.color.individual.green.hardware.peripheral + " &gt; " + data.attributes.color.individual.green.hardware.sensorname + " &gt; " + data.attributes.color.individual.green.hardware.attribute }}</p>
+        </div>
+      </div>
+      <div class="item item-body" id="light-list-item-container17" ng-click="configureColor(&quot;BLUE&quot;)">
+        <div id="light-markdown340" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#0000FF;font-size:18px;">
+            <strong> BLUE </strong>
+          </p>
+        </div>
+        <div id="light-markdown343" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ data.attributes.color.individual.blue.endpoint == 0 ? "0x" + ("0" + data.attributes.color.individual.blue.manual.toString(16).toUpperCase()).slice(-2) + " (" + data.attributes.color.individual.blue.manual + ")" : data.attributes.color.individual.blue.hardware.devicename
+            + " &gt; " + data.attributes.color.individual.blue.hardware.peripheral + " &gt; " + data.attributes.color.individual.blue.hardware.sensorname + " &gt; " + data.attributes.color.individual.blue.hardware.attribute }}</p>
+        </div>
+      </div>
     </form>
     <form id="light-form103" class="list">
       <div id="light-markdown135" class="show-list-numbers-and-dots">
@@ -44,23 +83,6 @@
       <label class="item item-input" id="light-input96">
         <input type="number" placeholder="" ng-model="data.attributes.fadeouttime">
       </label>
-      <div id="light-markdown182" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">{{ data.attributes.color.single.manual}}</p>
-
-        <p style="color:#387EF5;">{{ data.attributes.color.single.hardware}}</p>
-
-        <p style="color:#387EF5;">{{ data.attributes.color.individual.red.manual}}</p>
-
-        <p style="color:#387EF5;">{{ data.attributes.color.individual.red.hardware}}</p>
-
-        <p style="color:#387EF5;">{{ data.attributes.color.individual.green.manual}}</p>
-
-        <p style="color:#387EF5;">{{ data.attributes.color.individual.green.hardware}}</p>
-
-        <p style="color:#387EF5;">{{ data.attributes.color.individual.blue.manual}}</p>
-
-        <p style="color:#387EF5;">{{ data.attributes.color.individual.blue.hardware}}</p>
-      </div>
     </form>
     <form id="light-form104" class="list">
       <button id="light-button99" ng-click="submit()" class="button button-positive button-block">{{ data.sensor.subclass ? "DONE" : "SAVE" }}</button>
