--- a/webapp/src/ionicapp/www/templates/viewI2CDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewI2CDevice.html
@@ -31,7 +31,7 @@
         <p style="color:#387EF5;">Address</p>
       </div>
       <div id="viewI2CDevice-markdown105" class="show-list-numbers-and-dots">
-        <p style="color:#444444;font-size:18px;">{{ data.sensor.address }}</p>
+        <p style="color:#444444;font-size:18px;">0x{{ data.sensor.address.toString(16).toUpperCase() }} ({{ data.sensor.address }})</p>
       </div>
       <div id="viewI2CDevice-markdown106" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Class</p>
